Correções: adiciona TipoSensor, ajusta ServicoDeSeguranca e remove import não utilizado